# tauri-simple-app

./: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
.github/workflows/: release.yml
web/: index.html
