[package]
name = "tauri-simple-app"
version = "0.1.0"
description = "A Simple Tauri App to check tauri compatibility"
authors = ["anatawa12"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
